--- a/_includes/product.html
+++ b/_includes/product.html
@@ -9,7 +9,7 @@
     data-item-name="{{ product.name }}"
     data-item-id="{{ product.id }}"
     data-item-image="{{ product.image }}"
-    data-item-url="https://ruemorgue.github.io/"
+    data-item-url="https://ruemorgue2.github.io/"
     data-item-price="{{ product.price }}">
     Buy it for {{ product.price }} €
   </button>
