--- a/_includes/productdetails.html
+++ b/_includes/productdetails.html
@@ -16,7 +16,7 @@ head:
       data-item-name="{{ page.name }}"
       data-item-id="{{ product.id }}"
       data-item-image="{{ page.image }}"
-      data-item-url="https://ruemorgue.github.io/"
+      data-item-url="https://ruemorgue2.github.io/"
       data-item-price="{{ page.price }}">
       Buy it for {{ page.price }} $
     </button>
