--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -3,7 +3,7 @@
 
   <!-- Parallax Contact Image -->
   <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-    <img src="{{ site.baseurl }}/images/hintergrund.PNG"  style="opacity: 0.5" />
+    <img src="{{ site.baseurl }}/images/Hintergrund.PNG"  style="opacity: 0.5" />
   </div>
 
   <div class="container">
