--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
   <!-- Parallax Header Image -->
   <div class="parallax-wrapper">
     <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund.PNG" alt="The Autumn Almanacs - Homepage" />
-      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund.PNG" alt="The Autumn Almanacs - Homepage" />
+      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund2.PNG" alt="The Autumn Almanacs - Homepage" />
+      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund2.PNG" alt="The Autumn Almanacs - Homepage" />
     </div>
   </div>
 
@@ -17,7 +17,7 @@
    
       <!-- Logo -->
       <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Hintergrund.PNG" width="100"
+        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Hintergrund2.PNG" width="100"
             alt="Sera - OnePage Logo by Ohkimur"></a>
       </div>
 
