--- a/_scss/layout/_global.scss
+++ b/_scss/layout/_global.scss
@@ -255,7 +255,7 @@ blockquote {
 		content: "";
       display: block;
 			position: absolute;
-      background: url("/images/Logo_Marcus.PNG") center no-repeat #fff;
+      background: url("/images/Logo_Marcus2.PNG") center no-repeat #fff;
    //  background-image: url("images/autumn_logo.png");
 			width: 100%;
 			height: 100%;
