--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
         <div class="row heading-title">
           <h2>{{ site.headter-tagline }}</h2>
           <hr class="small">
-          <h1 class="thin">{{ site.header-title }}</h1>
+          <h1 class="thin" style="font-weight: bold; color: red">{{ site.header-title }}</h1>
         </div>
 
    
