--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -47,7 +47,7 @@
             <textarea style="color: black" name="message" rows="8" cols="40" placeholder="Message" ></textarea>
           </div>
           <div class="col-md-12 form-action">
-            <button type="submit" class="send-button" style="color: black" >Send Message</button>
+            <button type="submit" class="send-button" style="color: black" >Sende eine Nachricht</button>
           </div>
         </form>
       </div>
