--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -1,4 +1,4 @@
-/**
+  /**
  *
  *  Header Style
  *
@@ -109,7 +109,7 @@ header.site-header {
 
             a {
               display: block;
-              color: $white;
+              color: #000;
               padding: 10px 0;
 
               &:hover,
@@ -131,7 +131,7 @@ header.site-header {
     height: calc(100vh - 250px);
     max-height: calc(1080px - 250px);
     z-index: 2;
-    color: $white;
+    color: #000;
 
     .heading-content {
       width: 100%;
@@ -167,7 +167,7 @@ header.site-header {
       position: relative;
       font-size: 4rem;
       line-height: 4rem;
-      color: $white;
+      color: #000;
       width: 64px;
       height: 64px;
 
