--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,20 @@
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{
             site.footer-copyright-year }} Copyright</p>
         </div>
+        <div class="footer-text text-center">
+          <p>Ingenieurbüro Marcus Brand</p>
+
+          <p> GTÜ Vertragspartner</p>
+            
+            <p>  c/o Kfz- und Bikeservice Tirincanti</p>
+            
+              <p>  Stöckstrasse 21</p>
+            
+                <p>  44649 Herne</p>
+            
+                  <p> 017655022369</p>
+            </p>
+        </div>
       </div>
     </div>
 
