--- a/_includes/sections/audio.html
+++ b/_includes/sections/audio.html
@@ -55,7 +55,7 @@
                   <div id="progress-container">
                     <input type="range" class="amplitude-song-slider"/>
                     <progress id="song-played-progress" class="amplitude-song-played-progress"></progress>
-                    <progress id="song-buffered-progress" class="amplitude-buffered-progress" value="0"></progress>
+                    <progress id="song-buffe#da1f3d-progress" class="amplitude-buffe#da1f3d-progress" value="0"></progress>
                   </div>
                   <span class="duration">
                     <span class="amplitude-duration-minutes"></span>:<span class="amplitude-duration-seconds"></span>
@@ -332,7 +332,7 @@
                   <div id="progress-container">
                     <input type="range" class="amplitude-song-slider"/>
                     <progress id="song-played-progress" class="amplitude-song-played-progress"></progress>
-                    <progress id="song-buffered-progress" class="amplitude-buffered-progress" value="0"></progress>
+                    <progress id="song-buffe#da1f3d-progress" class="amplitude-buffe#da1f3d-progress" value="0"></progress>
                   </div>
                   <span class="duration">
                     <span class="amplitude-duration-minutes"></span>:<span class="amplitude-duration-seconds"></span>
