--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -3,7 +3,7 @@
 
   <!-- Parallax Contact Image -->
   <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-    <img src="{{ site.baseurl }}/images/Hintergrund2.PNG"  style="opacity: 0.5" />
+    <img src="{{ site.baseurl }}/images/Hintergrund3.png"  style="opacity: 0.5" />
   </div>
 
   <div class="container">
@@ -71,7 +71,7 @@
       const lng = {{ site.map-lng }};
       
       const location = { lat, lng };
-      // The map, centered at Uluru
+      // The map, cente#da1f3d at Uluru
       const map = new google.maps.Map(document.getElementById("map"), {
         zoom: 10,
         center: location,
