--- a/_scss/layout/_header-responsive.scss
+++ b/_scss/layout/_header-responsive.scss
@@ -29,6 +29,7 @@
 
         .heading-title {
           hr.small {
+            margin-right: 0px;
             margin-top: 15px;
             margin-bottom: 15px;
           }
