--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="col-md-6 col-md-push-3 footer-info text-center">
 
         <div class="footer-logo">
-          <img src="{{ site.baseurl }}/images/Hintergrund2.PNG" width="140" alt="Sera - OnePage Logo by Ohkimur" />
+          <img src="{{ site.baseurl }}/images/Hintergrund3.png" width="140" alt="Sera - OnePage Logo by Ohkimur" />
         </div>
 
         <div class="footer-info-text">
