--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
   <!-- Parallax Header Image -->
   <div class="parallax-wrapper">
     <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund2.PNG" alt="The Autumn Almanacs - Homepage" />
-      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund2.PNG" alt="The Autumn Almanacs - Homepage" />
+      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund3.png" alt="The Autumn Almanacs - Homepage" />
+      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund3.png" alt="The Autumn Almanacs - Homepage" />
     </div>
   </div>
 
@@ -17,7 +17,7 @@
    
       <!-- Logo -->
       <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Hintergrund2.PNG" width="100"
+        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Hintergrund3.png" width="100"
             alt="Sera - OnePage Logo by Ohkimur"></a>
       </div>
 
@@ -56,9 +56,7 @@
 
         <!-- Heading Title -->
         <div class="row heading-title">
-          <h2>{{ site.headter-tagline }}</h2>
-          <hr class="small">
-          <h1 class="thin" style="font-weight: bold; color: red">{{ site.header-title }}</h1>
+          <h1 class="thin" style="margin-left: 850px; font-weight: bold; color: #da1f3d">{{ site.header-title }}</h1>
         </div>
 
    
