--- a/_scss/modules/_color-skin.scss
+++ b/_scss/modules/_color-skin.scss
@@ -36,7 +36,7 @@
  **/
 
 // Theme Colors
-$blue:  red;            // #21c2f8;
+$blue:  #da1f3d;            // #21c2f8;
 $green:  #2ecc71;
 
 // Global Pallete
