--- a/_includes/sections/prices.html
+++ b/_includes/sections/prices.html
@@ -2,6 +2,6 @@
   <div class="container">
     
 
-    <img id="scheduling-1016815969417047" src="//conversiontoolbox.net/web/img/scheduling_de.gif" onclick="openScheduling(1016815969417047)" style="cursor : pointer; border: 0"/> <script type="text/javascript">var scheduling = {server: 'app.agendize.com', button: '1016815969419199', lang: 'de'};</script> <script type="text/javascript" src="https://app.agendize.com/web/scheduling.js"></script>
+    <img id="scheduling-1016815969417047" src="//images/Termin.PNG" onclick="openScheduling(1016815969417047)" style="cursor : pointer; border: 0"/> <script type="text/javascript">var scheduling = {server: 'app.agendize.com', button: '1016815969419199', lang: 'de'};</script> <script type="text/javascript" src="https://app.agendize.com/web/scheduling.js"></script>
     
   </div></section>
