--- a/_includes/sections/offer.html
+++ b/_includes/sections/offer.html
@@ -7,10 +7,8 @@
     </div>
     <div class="col-md-3 col-md-push-0 col-sm-8 col-sm-push-2 col-xs-10 col-xs-push-1">
 
-      <img id="scheduling-1016815969417047" src="/images/Termin.PNG" class="button-cta button-block"
-      onclick="openScheduling(1016815969417047)" style="cursor : pointer; border: 0"/> 
-      <script type="text/javascript">var scheduling = {server: 'app.agendize.com', button: '1016815969419199', lang: 'de'};</script> 
-      <script type="text/javascript" src="https://app.agendize.com/web/scheduling.js"></script>
+
+      <img id="scheduling-1016815969417047" src="/images/Termin.PNG" onclick="openScheduling(1016824321454924)" style="cursor : pointer; border: 0"/> <script type="text/javascript">var scheduling = {server: 'app.agendize.com', button: '1016824321457347', lang: 'de'};</script> <script type="text/javascript" src="https://app.agendize.com/web/scheduling.js"></script>
     
     </div>
 
