--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,6 +40,7 @@
             <li class="current-menu-item"><a href="#home">Home</a></li>
             <li><a href="#about">Über</a></li>
             <li><a href="#portfolio">Bilder</a></li>
+            <li><a href="#prices">Preise</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
         </nav>
@@ -55,8 +56,8 @@
       <div class="heading-content text-center child-center-v">
 
         <!-- Heading Title -->
-        <div class="row heading-title">
-          <h1 class="thin" style="margin-left: 850px; font-weight: bold; color: #da1f3d">{{ site.header-title }}</h1>
+        <div class="row heading-title" style="position: relative; display: block; float: right">
+          <div class="thin" style="font-size: 2.5em; float: left; font-weight: bold; color: #da1f3d">{{ site.header-title }}</div>
         </div>
 
    
