--- a/_includes/sections/prices.html
+++ b/_includes/sections/prices.html
@@ -1,7 +1,33 @@
-<section class="site-section prices-section" id="prices">
+<section class="site-section portfolio-section section-focus" id="prices">
   <div class="container">
-    
 
-    <img id="scheduling-1016815969417047" src="//images/Termin.PNG" onclick="openScheduling(1016815969417047)" style="cursor : pointer; border: 0"/> <script type="text/javascript">var scheduling = {server: 'app.agendize.com', button: '1016815969419199', lang: 'de'};</script> <script type="text/javascript" src="https://app.agendize.com/web/scheduling.js"></script>
-    
-  </div></section>
+    <!-- Section Heading -->
+    <div class="row text-center">
+
+      <!-- Section Header -->
+      <header class="col-md-8 col-md-push-2 col-sm-12 section-header">
+        <h2>Preisliste GTü</h2>
+        <hr class="normal">
+      </header>
+
+
+    </div>
+
+
+    <!-- Portfolio Grid -->
+    <div class="row portfolio-grid">
+
+
+      <div class="col-md-12 col-sm-1 item visible {% for category in item.categories %} {{ category | replace:' ','-' | downcase }}{% endfor %}">
+        <figure class="img-wrap">
+          <img id="scheduling-1016815969417047" src="/images/Prices.PNG"/>
+        </figure>
+      </div>
+
+
+      <!-- Overlay Lightbox 
+      <div id="overlay" class="overlay"></div>-->
+    </div>
+
+  </div>
+</section>
