--- a/_includes/sections/contact.html
+++ b/_includes/sections/contact.html
@@ -29,7 +29,7 @@
 
       <!-- Contact Form -->
       <div class="col-md-8 col-md-push-2">
-        <form id="sera-contact-form" action="https://formspree.io/f/mknyggoo" method="POST"
+        <form id="sera-contact-form" action="https://formspree.io/f/xvonlwgw" method="POST"
           class="contact-form container-fluid"  style="color: black">
           <div class="col-md-6" style="color: black" >
             <input style="color: black !important" type="text" name="name" placeholder="Name" />
