--- a/_scss/modules/_class-tools.scss
+++ b/_scss/modules/_class-tools.scss
@@ -129,10 +129,10 @@
       display: block;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+   //   min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 1%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
@@ -141,10 +141,10 @@
       display: none;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+      //min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 10%;
       left: 50%;
       transform: translate(-50%, -50%);
       
@@ -154,10 +154,10 @@
       display: block;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+   //   min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 10%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
@@ -168,10 +168,10 @@
       display: block;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+      //    min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 10%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
@@ -180,10 +180,10 @@
       display: none;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+     //     min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 1%;
       left: 50%;
       transform: translate(-50%, -50%);
       
@@ -193,10 +193,10 @@
       display: block;
       width: auto;
       min-width: 100%;
-      min-height: 120%;
+      //    min-height: 120%;
       max-width: inherit;
       max-height: 140%;
-      top: 50%;
+      top: 10%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
