--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <title>{{ page.title | strip_html }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.PNG" title="Favicon" />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/images/royalflash_logo.jpeg" title="Favicon" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"></script>
