--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
   <!-- Parallax Header Image -->
   <div class="parallax-wrapper">
     <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund3.PNG" alt="The Autumn Almanacs - Homepage" />
-      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund2.jpg" width="10px" alt="The Autumn Almanacs - Homepage" />
+      <img id="img1" src="{{ site.baseurl }}/images/bannerRF.jpg" alt="The Autumn Almanacs - Homepage" />
+      <img id="img2" src="{{ site.baseurl }}/images/bannerRF.jpg" width="10px" alt="The Autumn Almanacs - Homepage" />
     </div>
   </div>
 
