--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -9,7 +9,7 @@
 header.site-header {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 20vh;
   max-height: 1080px;
   z-index: 1;
 
@@ -109,7 +109,7 @@ header.site-header {
 
             a {
               display: block;
-              color: #000;
+              color: white;
               padding: 10px 0;
 
               &:hover,
