--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -2,25 +2,33 @@
 <section class="site-section about-section next-section-indicator" id="about">
   <div class="container">
 
+    
     <!-- Section Heading -->
     <div class="row text-center">
 
 
 
-
       <!-- Section Header -->
       <header class="col-md-8 col-md-push-2 col-sm-12 section-header">
-        <h2>{{ site.about-title }}</h2>
+        <h2>Videos</h2>
         <hr class="normal">
       </header>
 
       
       <!-- Section Content -->
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
+      <div class="outer">
+
+          <iframe width="360" height="315" src="https://www.youtube.com/embed/vq6O-BRJQ9s?si=L_tHRELD3tOtuSjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
-        <p>{{ site.about-description }}</p></div>
-         
+          <iframe width="360" height="315" src="https://www.youtube.com/embed/89Q2QBLEfIM?si=rgwbjO2N-Mn_vuva"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+          <iframe width="360" height="315" src="https://www.youtube.com/embed/-tPjMmTsi2U?si=Z_s9YX5wdKz1klAd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      
+      </div>
+         </div>
       
 
       
