--- a/_scss/modules/_font-7-stroke.scss
+++ b/_scss/modules/_font-7-stroke.scss
@@ -546,7 +546,7 @@
 .pe-7s-crop:before {
 	content: "\e663";
 }
-.pe-7s-c#da1f3dit:before {
+.pe-7s-credit:before {
 	content: "\e664";
 }
 .pe-7s-copy-file:before {
