--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="col-md-6 col-md-push-3 footer-info text-center">
 
         <div class="footer-logo">
-          <img src="{{ site.baseurl }}/images/Hintergrund3.PNG" width="140" alt="Sera - OnePage Logo by Ohkimur" />
+          <img src="{{ site.baseurl }}/images/channels4_banner.jpg"  alt="Sera - OnePage Logo by Ohkimur" />
         </div>
 
         <div class="footer-info-text">
@@ -15,9 +15,9 @@
 
         <div class="social-icons">
           <ul class="icons">
-      <!--        <li><a href="{{ site.youtube }}" target="_blank"><i class="fi flaticon-youtube"></i></a></li>
-         <li><a href="{{ site.pinterest }}" target="_blank"><i class="fi flaticon-pinterest"></i></a></li> 
-            <li><a href="{{ site.facebook }}" target="_blank"><i class="fi flaticon-facebook"></i></a></li>--> 
+            <li><a href="{{ site.youtube }}" target="_blank"><i class="fi flaticon-youtube"></i></a></li>
+       <!--   <li><a href="{{ site.pinterest }}" target="_blank"><i class="fi flaticon-pinterest"></i></a></li>-->  
+            <li><a href="{{ site.facebook }}" target="_blank"><i class="fi flaticon-facebook"></i></a></li>
          <!--      <li><a href="{{ site.twitter }}" target="_blank"><i class="fi flaticon-twitter"></i></a></li>-->  
           <!--     <li><a href="{{ site.google-plus }}" target="_blank"><i class="fi flaticon-google-plus"></i></a></li>-->  
          <!--      <li><a href="{{ site.vimeo }}" target="_blank"><i class="fi flaticon-vimeo"></i></a></li>-->  
@@ -31,20 +31,6 @@
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{
             site.footer-copyright-year }} Copyright</p>
-        </div>
-        <div class="footer-text text-center">
-          <p>Ingenieurbüro Marcus Brand</p>
-
-          <p> GTÜ Vertragspartner</p>
-            
-            <p>  c/o Kfz- und Bikeservice Tirincanti</p>
-            
-              <p>  Stöckstrasse 21</p>
-            
-                <p>  44649 Herne</p>
-            
-                  <p> 017655022369</p>
-            </p>
         </div>
       </div>
     </div>
