--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
   <!-- Parallax Header Image -->
   <div class="parallax-wrapper">
     <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-      <img id="img1" src="{{ site.baseurl }}/images/Hintergrund3.PNG" alt="The Autumn Almanacs - Homepage" />
-      <img id="img2" src="{{ site.baseurl }}/images/Hintergrund2.jpg" width="10px" alt="The Autumn Almanacs - Homepage" />
+      <img id="img1" src="{{ site.baseurl }}/images/background_lp.jpg" alt="The Autumn Almanacs - Homepage" />
+      <img id="img2" src="{{ site.baseurl }}/images/background_lp.jpg" alt="The Autumn Almanacs - Homepage" />
     </div>
   </div>
 
@@ -17,7 +17,7 @@
    
       <!-- Logo -->
       <div class="col-sm-2 col-xs-4 logo child-center-v">
-        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Hintergrund3.PNG" width="100"
+        <a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/images/Affen.png" width="50"
             alt="Sera - OnePage Logo by Ohkimur"></a>
       </div>
 
@@ -37,11 +37,9 @@
         <!-- Navigation Menu -->
         <nav id="navMenu" class="nav-menu">
           <ul class="menu">
-            <li class="current-menu-item"><a href="#home">Home</a></li>
-            <li><a href="#about">Über</a></li>
-            <li><a href="#portfolio">Bilder</a></li>
-            <li><a href="#prices">Preise</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li class="current-menu-item"><a style="font-size: 22px" href="#home">Home</a></li>
+            <li><a style="font-size: 22px" href="#about">Videos</a></li>
+            <li><a style="font-size: 22px" href="#contact">Kontakt</a></li>
           </ul>
         </nav>
 
@@ -50,20 +48,7 @@
 
     </div>
 
-    <!-- Site Header Banner -->
-    <div class="row header-banner parent" data-scrollax="properties: { 'translateY': '48%', 'opacity': '1.4' }">
-
-      <div class="heading-content text-center child-center-v">
-
-        <!-- Heading Title -->
-        <div class="row heading-title" style="position: relative; display: block; float: right">
-          <div class="thin" style="font-size: 2.5em; float: left; font-weight: bold; color: #da1f3d">{{ site.header-title }}</div>
-        </div>
-
    
-      </div>
-
-    </div>
 
     <!-- Arrow Down -->
     <div class="row arrow-down-section" data-scrollax="properties: { 'opacity': '0.4' }">
