--- a/_includes/sections/Amplitude.html
+++ b/_includes/sections/Amplitude.html
@@ -27,7 +27,7 @@
 							<div id="progress-container">
 								<input type="range" class="amplitude-song-slider"/>
 								<progress id="song-played-progress" class="amplitude-song-played-progress"></progress>
-								<progress id="song-buffe#da1f3d-progress" class="amplitude-buffe#da1f3d-progress" value="0"></progress>
+								<progress id="song-buffered-progress" class="amplitude-buffered-progress" value="0"></progress>
 							</div>
 							<span class="duration">
 								<span class="amplitude-duration-minutes"></span>:<span class="amplitude-duration-seconds"></span>
