--- a/_scss/layout/_header-responsive.scss
+++ b/_scss/layout/_header-responsive.scss
@@ -29,7 +29,6 @@
 
         .heading-title {
           hr.small {
-            margin-right: 0px;
             margin-top: 15px;
             margin-bottom: 15px;
           }
@@ -47,7 +46,7 @@
       top: 0;
       left: 15px;
       min-height: 60px;
-      background: $primary;
+      background: #202020;
       z-index: 99999999999999;
 
       // Navigation Bar
