--- a/_scss/modules/_class-tools.scss
+++ b/_scss/modules/_class-tools.scss
@@ -100,9 +100,9 @@
     #img2{
       position: absolute;
       display: block;
-      width: 100%;
-      min-width: 80%;
-      min-height: 80%;
+      width: auto;
+      min-width: 100%;
+      min-height: 120%;
       max-width: inherit;
       max-height: 140%;
       top: 50%;
