--- a/_scss/modules/_color-skin.scss
+++ b/_scss/modules/_color-skin.scss
@@ -36,7 +36,7 @@
  **/
 
 // Theme Colors
-$blue:  #da1f3d;            // #21c2f8;
+$blue:  red;            // #21c2f8;
 $green:  #2ecc71;
 
 // Global Pallete
@@ -63,7 +63,7 @@ $global-text: darken($text-gray, 15%);
 $background-color: $white;
 
 // Sections Colors
-$section-bg: $white;
+$section-bg: #464646;
 $section-focus: $light-blue;
 
 // Footer Colors
