--- a/css/amplitude.css
+++ b/css/amplitude.css
@@ -177,7 +177,7 @@ div#amplitude-player {
       background-color: #00A0FF;
       height: 5px;
       margin-top: -2px; }
-    div#progress-container progress#song-buffe#da1f3d-progress {
+    div#progress-container progress#song-buffered-progress {
       position: absolute;
       left: 0;
       top: 8px;
@@ -192,14 +192,14 @@ div#amplitude-player {
       background: transparent;
       border: none;
       background-color: #D7DEE3; }
-    div#progress-container progress#song-buffe#da1f3d-progress[value]::-webkit-progress-bar {
+    div#progress-container progress#song-buffered-progress[value]::-webkit-progress-bar {
       background-color: #CFD8DC;
       border-radius: 5px; }
-    div#progress-container progress#song-buffe#da1f3d-progress[value]::-webkit-progress-value {
+    div#progress-container progress#song-buffered-progress[value]::-webkit-progress-value {
       background-color: #78909C;
       border-radius: 5px;
       transition: width .1s ease; }
-    div#progress-container progress#song-buffe#da1f3d-progress::-moz-progress-bar {
+    div#progress-container progress#song-buffered-progress::-moz-progress-bar {
       background: none;
       border-radius: 5px;
       background-color: #78909C;
@@ -208,15 +208,15 @@ div#amplitude-player {
     div#progress-container progress::-ms-fill {
       border: none; }
   @-moz-document url-prefix() {
-    div#progress-container progress#song-buffe#da1f3d-progress {
+    div#progress-container progress#song-buffered-progress {
       top: 9px;
       border: none; } }
     @media all and (-ms-high-contrast: none) {
-      div#progress-container *::-ms-backdrop, div#progress-container progress#song-buffe#da1f3d-progress {
+      div#progress-container *::-ms-backdrop, div#progress-container progress#song-buffered-progress {
         color: #78909C;
         border: none; } }
     @supports (-ms-ime-align: auto) {
-      div#progress-container progress#song-buffe#da1f3d-progress {
+      div#progress-container progress#song-buffered-progress {
         color: #78909C;
         border: none; } }
     div#progress-container input[type=range] {
