--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@
  *  Version: 1.0
  *  License: GNU General Public License v2 or later
  *  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- *  Tags: onepage, blog, multiple-columns, left-sidebar, right-sidebar, accessibility-ready, custom-background, custom-colors, custom-header, custom-logo, custom-menu, editor-style, featu#da1f3d-images, post-formats, threaded-comments, translation-ready
+ *  Tags: onepage, blog, multiple-columns, left-sidebar, right-sidebar, accessibility-ready, custom-background, custom-colors, custom-header, custom-logo, custom-menu, editor-style, featured-images, post-formats, threaded-comments, translation-ready
  *  Text Domain: sera-onepage
  *
  *  @package ohkimur_project
