--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,23 +2,27 @@
     <div class="hero-body">
         <div class="container">
             <div class="columns">
-                <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                    <div class="container columns is-centered">
                     <figure class="image">
-                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
+                        <img class="is-rounded" style="width: 200%" src="{{site.author-image}}" alt="{{site.author-name}}">
                     </figure>
                 </div>
-                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+                </div></div>
+            <br/><br/><br/>
+                <div class="columns">
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
                     <p>{{site.author-about}}</p>
                     <br>
                     <div class="container columns is-centered">
                         <div>
                             <a href="{{site.url}}{{site.baseurl}}/#contact"
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Contact
-                                Me</a>
+                                Us</a>
                             </a>
                         </div>
                         <div>
-                            <a href="{{site.url}}{{site.baseurl}}/blog"
+                            <a href="{{site.url}}{{site.baseurl}}/blog" style="padding-left: 504px"
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Blog</a>
                             </a>
                         </div>
