--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,16 +70,16 @@ a.navbar-item.is-active {
 
 #about {
     .image {
-        max-width: 20vmax;
+        max-width: 100vmax;
         margin: auto;
 
         img {
-            border: 0.25rem dotted black;
+            border: 0.25rem  black;
         }
     }
 
     a {
-        min-width: 25vmax;
+        min-width: 1vmax;
         margin: 0.5rem;
     }
 }
