First package Saturday

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,11 @@
 <section class="hero is-fullheight has-text-centered has-background-white-ter" id="about">
-    <div class="hero-body">
+    <div class="hero-body2">
         <div class="container">
             <div class="columns">
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
                     <div class="container columns is-centered">
                     <figure class="image">
-                        <img class="is-rounded" style="width: 200%" src="{{site.author-image}}" alt="{{site.author-name}}">
+                        <img class="is-rounded"  src="{{site.author-image}}" alt="{{site.author-name}}">
                     </figure>
                 </div>
                 </div></div>
@@ -22,7 +22,7 @@
                             </a>
                         </div>
                         <div>
-                            <a href="{{site.url}}{{site.baseurl}}/blog" style="padding-left: 504px"
+                            <a href="{{site.url}}{{site.baseurl}}/blog" 
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Blog</a>
                             </a>
                         </div>
