--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,7 +36,7 @@ a.navbar-item.is-active {
     border-color: grey;
 }
 
-
+ 
 #hero {
     background: rgb(0, 0, 0);
     background: -moz-linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.75) 100%);
@@ -81,6 +81,10 @@ a.navbar-item.is-active {
         min-width: 1vmax;
         margin: 0.5rem;
     }
+
+    .hero-body2 {
+        padding: 3rem 1.5rem;
+       }
 }
 
 #contact {
@@ -107,7 +111,7 @@ a.navbar-item.is-active {
 
 #blog {
     .hero-body {
-        padding: 3rem 0.25rem 1rem 0.25rem;
+     padding: 3rem 0.25rem 1rem 0.25rem;
     }
 
     .container {
