--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,6 +52,6 @@
         </div>
     </div>
     <div class="has-background-black has-text-centered has-text-white" id="credits">
-        <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | <a href="https://www.the-royal-flash.de" target="_blank" rel="noopener noreferrer">The Royal Flash</a> - Homepage<i class="fas fa-thumbs-o-up has-text-danger"></i> by <a href="https://www.the-royal-flash.com" target="_blank" rel="noopener noreferrer">Stephan Jacobs</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
+        <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | <a href="https://www.the-royal-flash.de" target="_blank" rel="noopener noreferrer">The Royal Flash</a> - Homepage<i class="fas fa-thumbs-o-up has-text-danger"></i> by <a href="https://www.the-royal-flash.com" target="_blank" rel="noopener noreferrer">Rue Morgue</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
     </div>
 </footer>
