--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,8 @@ a.navbar-item.is-active {
         background-image: url({{site.heroimage}});
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+     //   background-size: contain
+     background-size: 100% 100%;
         background-attachment: fixed;
         top: 5px;
         right: 5px;
