--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,7 +51,7 @@ a.navbar-item.is-active {
         background-repeat: no-repeat;
      //   background-size: contain
      background-size: 100% 100%;
-        background-attachment: fixed;
+    //     background-attachment: fixed;
         top: 5px;
         right: 5px;
         bottom: 5px;
