--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -8,8 +8,8 @@
         {{site.description}}
       </h3>
       <hr>   <hr>  
-      <a href="{{site.url}}{{site.baseurl}}/#about"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
+      <a href="{{site.url}}{{site.baseurl}}/blog"
+        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">See us now Live in 2025!</a>
       </a>
     </div>
   </div>
