--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,15 +1,13 @@
-<section class="hero is-fullheight has-text-centered" id="hero">
-  <div class="hero-body">
+<section class="hero is-fullheight has-text-centered" style="display: block;" id="hero">
+  <div class="hero-body" style="display: grid; ">
     <div class="container">
-      <h1 class="title has-text-white is-size-1 is-uppercase has-text-weight-bold">
-
-      </h1>
-      <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
+<br>
+      <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless" >
         {{site.description}}
       </h3>
-      <hr>   <hr>  
       <a href="{{site.url}}{{site.baseurl}}/blog"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">See us now Live in 2025!</a>
+        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal" 
+        style="top:75vh;">See us now Live in 2025!</a>
       </a>
     </div>
   </div>
