--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -2,12 +2,10 @@
   <div class="hero-body" style="display: grid; ">
     <div class="container">
 <br>
-      <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless" >
-        {{site.description}}
-      </h3>
-      <a href="{{site.url}}{{site.baseurl}}/blog"
+
+      <a href="{{site.url}}{{site.baseurl}}/blog" style="color: red;"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal" 
-        style="top:75vh;">See us now Live in 2025!</a>
+        >See us now Live in 2025!</a>
       </a>
     </div>
   </div>
