--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                         <div class="column is-marginless">
                             <h5 class="has-text-grey-lighter">{{site.author-name}}</h5>
                             <div class="content has-text-grey">
-                                <p>{{site.author-about | truncate: 75 }}</p>
+                                <p>{{"Authentic Metal from the Heart of Germany" | truncate: 75 }}</p>
                             </div>
                         </div>
                     </div>
@@ -26,16 +26,16 @@
             </div>
 
 
-            <div class="column has-text-white">
-                <h3>Press (secured)</h3>
+            <div class="column has-text-left-desktop has-text-centered-mobile"">
+                <h5 class="has-text-grey-lighter">Press (secured)</h5>
                 <li>
                     <a target="_blank" href="{{site.url}}{{site.baseurl}}/example.html">Download Material</a>
                 </li>
             </div>
 
             <!--Blog-post Section-->
-            <div class="column has-text-white">
-                <h3>Recent Posts</h3>
+            <div class="column has-text-left-desktop has-text-centered-mobile"">
+                <h5 class="has-text-grey-lighter">Recent Posts</h5>
                 {% for post in site.posts offset: 0 limit:3 %}
                 <li>
                     <a href="{{post.url | absolute_url}}">{{post.title}}</a>
@@ -45,6 +45,6 @@
         </div>
     </div>
     <div class="has-background-black has-text-centered has-text-white" id="credits">
-        <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | <a href="https://www.the-royal-flash.de" target="_blank" rel="noopener noreferrer">The Royal Flash</a> - Homepage<i class="fas fa-thumbs-o-up has-text-danger"></i> by <a href="https://www.the-royal-flash.com" target="_blank" rel="noopener noreferrer">Rue Morgue</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
+        <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | <a href="https://www.the-royal-flash.de" target="_blank" rel="noopener noreferrer">The Royal Flash</a> - Homepage<i class="fas fa-thumbs-o-up has-text-danger"></i> by <a href="https://www.the-royal-flash.de" target="_blank" rel="noopener noreferrer">Rue Morgue</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
     </div>
 </footer>
