--- a/_includes/about.html
+++ b/_includes/about.html
@@ -29,5 +29,46 @@
                     </div>
                 </div>
             </div>
+            <br/>
+            <div class="columns">
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                    <div class="container columns is-centered">
+                    <figure class="image">
+                        <img class="is-rounded"  src="/assets/images/WittenLive_01.jpg" alt="{{site.author-name}}">
+                    </figure>
+                </div>
+                </div></div>
+                <div class="columns">
+                    <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                        <div class="container columns is-centered">
+                        <figure class="image">
+                            <img class="is-rounded"  src="/assets/images/WittenLive_02.jpg" alt="{{site.author-name}}">
+                        </figure>
+                    </div>
+                    </div></div>
+                    <div class="columns">
+                        <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                            <div class="container columns is-centered">
+                            <figure class="image">
+                                <img class="is-rounded"  src="/assets/images/WittenLive_03.jpg" alt="{{site.author-name}}">
+                            </figure>
+                        </div>
+                        </div></div>
+                        <div class="columns">
+                            <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                                <div class="container columns is-centered">
+                                <figure class="image">
+                                    <img class="is-rounded"  src="/assets/images/WittenLive_04.jpg" alt="{{site.author-name}}">
+                                </figure>
+                            </div>
+                            </div></div>
+                            <div class="columns">
+                                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                                    <div class="container columns is-centered">
+                                    <figure class="image">
+                                        <img class="is-rounded"  src="/assets/images/WittenLive_05.jpg" alt="{{site.author-name}}">
+                                    </figure>
+                                </div>
+                                </div></div>
         </div>
 </section>
