Hintergrund und new Blog

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -5,7 +5,7 @@
 
       <a href="{{site.url}}{{site.baseurl}}/blog" style="color: red;"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal" 
-        >See us now Live in 2025!</a>
+        >Thanks for the first Live Gigs in 2025!</a>
       </a>
     </div>
   </div>
