--- a/_sass/main_style.scss
+++ b/_sass/main_style.scss
@@ -19,7 +19,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: white !important;
+    background: rgba(51, 45, 82, 0.87) !important;
 }
 
 /* Handle */
