--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight has-text-centered has-background-white-ter" id="about">
+<section class="hero is-fullheight has-text-centered" style="color: lightblue; background-image: url(assets/images/TRF-Hintergrund-XL.jpg)" id="about">
     <div class="hero-body2">
         <div class="container">
             <div class="columns">
