--- a/_includes/blogpage-heading.html
+++ b/_includes/blogpage-heading.html
@@ -1,5 +1,5 @@
 <!-- Main container -->
-<nav class="level has-text-centered">
+<nav class="level has-text-centered" style="color: lightblue; background-image: url(assets/images/TRF-Hintergrund-XL.jpg)">
     <!-- Left side -->
     <div class="level-left">
         <p class="subtitle is-uppercase has-text-weight-medium has-text-grey">Have a Good Read</p>
