--- a/_includes/media.html
+++ b/_includes/media.html
@@ -5,6 +5,15 @@
         <div class="container" >
             <div class="columns">
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+
+                        <div class="container columns is-centered">
+                            <figure>
+                                <iframe width="440" height="280" src="https://www.youtube.com/embed/v4diO6Z7Vuk?si=2_XYN399X_3Bie2m" frameborder="0" allowfullscreen></iframe>
+                            </figure>
+                    </div>
+
+                </div>
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
                     <div class="container columns is-centered">
                         <figure>
                             <iframe width="440" height="280" src="https://www.youtube.com/embed/aKFR-2wQNgY" frameborder="0" allowfullscreen></iframe>
@@ -19,13 +28,13 @@
                 </div>
                 </div>
             
-                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+      <!--          <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
                     <div class="container columns is-centered">
                         <figure>
                             <iframe width="440" height="280" src="//www.youtube.com/embed/69aIjNRbAkQ" frameborder="0" allowfullscreen></iframe>
                         </figure>
                 </div>
-                </div> 
+                </div> -->
             </div>
             
                 </div>
