--- a/_includes/media.html
+++ b/_includes/media.html
@@ -19,7 +19,19 @@
                             <iframe width="440" height="280" src="https://www.youtube.com/embed/aKFR-2wQNgY" frameborder="0" allowfullscreen></iframe>
                         </figure>
                 </div>
+
+               </div>
+               
+                         <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
+                    <div class="container columns is-centered">
+                        <figure>
+                            <iframe width="440" height="280" src="https://www.youtube.com/embed/AGji-uerIS8" frameborder="0" allowfullscreen></iframe>
+                        </figure>
                 </div>
+
+               </div>      
+               
+               <!-- 
   <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd ">
                     <div class="container columns is-centered">
                         <figure>
