--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -5,7 +5,7 @@
 
       <a href="{{site.url}}{{site.baseurl}}/blog" style="color: red;"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal" 
-        >Live at Darkness Rising / GE-Bismarck in 2026!</a>
+        >Live 2026 in GE-Bismarck!</a>
       </a>
     </div>
   </div>
