--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
 
 
             <div class="column has-text-left-desktop has-text-centered-mobile"">
-                <h5 class="has-text-grey-lighter">Press (secured)</h5>
+                <h5 class="has-text-grey-lighter">Press</h5>
                 <li>
                     <a target="_blank" href="{{site.url}}{{site.baseurl}}/example.html">Download Material</a>
                 </li>
